--- a/css/forms.css
+++ b/css/forms.css
@@ -71,18 +71,18 @@ legend {
   color: #333;
   border-bottom: 1px solid #e5e5e5;
 }
-.yui3-inline-form input,
-.yui3-horizontal-form input,
-.yui3-rounded-form input,
-.yui3-inline-form textarea,
-.yui3-horizontal-form textarea,
-.yui3-rounded-form textarea,
-.yui3-inline-form select,
-.yui3-horizontal-form select,
-.yui3-rounded-form select,
-.yui3-inline-form .yui3-help-inline,
-.yui3-horizontal-form .yui3-help-inline,
-.yui3-rounded-form .yui3-help-inline {
+.yui3-form-inline input,
+.yui3-form-horizontal input,
+.yui3-form-rounded input,
+.yui3-form-inline textarea,
+.yui3-form-horizontal textarea,
+.yui3-form-rounded textarea,
+.yui3-form-inline select,
+.yui3-form-horizontal select,
+.yui3-form-rounded select,
+.yui3-form-inline .yui3-help-inline,
+.yui3-form-horizontal .yui3-help-inline,
+.yui3-form-rounded .yui3-help-inline {
   display: inline-block;
   *display: inline;
   /* IE7 inline-block hack */
@@ -91,25 +91,25 @@ legend {
   vertical-align: middle;
   margin-bottom: 0;
 }
-.yui3-inline-form label {
+.yui3-form-inline label {
   display: inline-block;
   *display: inline;
   *zoom: 1;
 }
-.yui3-horizontal-form .yui3-control-group {
+.yui3-form-horizontal .yui3-control-group {
   margin-bottom: 10px;
 }
-.yui3-horizontal-form .yui3-control-group label {
+.yui3-form-horizontal .yui3-control-group label {
   display: inline-block;
   text-align: right;
   float: left;
   width: 160px;
   margin-right: 10px;
 }
-.yui3-horizontal-form .yui3-controls {
+.yui3-form-horizontal .yui3-controls {
   margin: 20px 0 0 170px;
 }
-.yui3-rounded-form input {
+.yui3-form-rounded input {
   border-radius: 20px;
   padding-left: 10px;
 }
