--- a/docs/index.mustache
+++ b/docs/index.mustache
@@ -1,438 +1,9 @@
-<link rel="stylesheet" type="text/css" href="http://necolas.github.com/normalize.css/1.0.2/normalize.css">
-<link rel="stylesheet" href="http://yui.yahooapis.com/3.6.0/build/cssbutton/cssbutton.css">
-<link rel="stylesheet" type="text/css" href="assets/grids-responsive.css">
-<link rel="stylesheet" type="text/css" href="http://localhost/yui3-gallery/build/gallery-cssforms/gallery-cssforms.css">
-
-<style type="text/css">
-	
-	form {
-		/*Add some margin so things aren't so claustrophobic*/
-		margin: 20px 0;
-	}
-
-</style>
-
 <div class="intro">
     <p>
     	Simple CSS for HTML Form Elements.
     </p>
 </div>
 
-<h2>Default Form</h2>
-
 <p>
-    If no class name is placed on the `form` element, form labels are stacked on top of `input`	 elements and other form controls. This creates a nice left-aligned form.
+    Documentation for this module exists on <a href="http://tilomitra.github.com/cssforms/">Github Pages.</a> You can <a href="https://github.com/tilomitra/cssforms/issues">file issues</a> directly on Github too!
 </p>
-
-
-<form>
-  <fieldset>
-    <legend>Legend</legend>
-    <label>First Name</label>
-    <input type="text">
-    <label>Last Name</label>
-    <input type="text">
-    <label>E-Mail</label>
-    <input type="email" required>
-    <aside class='yui3-help-inline'>This is a required field.</aside>
-    <label>City</label>
-    <input type="text">
-    <label>State</label>
-    <select class='yui3-input-medium'>
-        <option>AL</option>
-        <option>CA</option>
-        <option>IL</option>
-        <option>MD</option>
-        <option>NY</option>
-    </select>
-    <label class="yui3-checkbox">
-      <input type="checkbox"> I've read the terms and conditions
-    </label>
-    <button type="submit" class='yui3-button'>Submit</button>
-  </fieldset>
-</form>
-
-<h3>The HTML</h3>
-
-```
-<form>
-  <fieldset>
-    <legend>Legend</legend>
-    <label>First Name</label>
-    <input type="text">
-    <select class='yui3-input-medium'>
-        <option>AL</option>
-        <option>CA</option>
-    </select>
-    <label class="yui3-checkbox">
-      <input type="checkbox"> I've read the terms and conditions
-    </label>
-    <button type="submit" class='yui3-button'>Submit</button>
-  </fieldset>
-</form>
-```
-<h2>Multi-Column Form (with YUI Grids)</h2>
-
-    Multi-column forms such as the one below can be created by pulling down <a href="http://yuilibrary.com/yui/docs/cssgrids/">YUI Grids</a>. The grid below uses media queries to collapse to a single column on smaller screens. 
-
-<form>
-  <fieldset>
-    <legend>Legend</legend>
-
-    <div class='yui3-g-responsive'>
-        <div class='yui3-u-1-3'>
-            <label>First Name</label>
-            <input type="text">
-        </div>
-        <div class='yui3-u-1-3'>
-            <label>Last Name</label>
-            <input type="text">
-        </div>
-        <div class='yui3-u-1-3'>
-            <label>E-Mail</label>
-            <input type="email" required>
-        </div>
-        
-        <div class='yui3-u-1-3'>
-            <label>City</label>
-            <input type="text">
-        </div>
-
-        <div class='yui3-u-1-3'>
-            <label>State</label>
-            <select class='yui3-input-medium'>
-                <option>AL</option>
-                <option>CA</option>
-                <option>IL</option>
-                <option>MD</option>
-                <option>NY</option>
-            </select>
-        </div>
-    </div>
-    <label class="yui3-checkbox">
-      <input type="checkbox"> I've read the terms and conditions
-    </label>
-    <button type="submit" class='yui3-button'>Submit</button>
-  </fieldset>
-</form>
-
-
-<h3>The HTML</h3>
-```
-<form>
-  <fieldset>
-    <legend>Legend</legend>
-
-    <div class='yui3-g-responsive'>
-        <div class='yui3-u-1-3'>
-            <label>First Name</label>
-            <input type="text">
-        </div>
-        <div class='yui3-u-1-3'>
-            <label>Last Name</label>
-            <input type="text">
-        </div>
-        <div class='yui3-u-1-3'>
-            <label>E-Mail</label>
-            <input type="email" required>
-        </div>
-        
-        <div class='yui3-u-1-3'>
-            <label>City</label>
-            <input type="text">
-        </div>
-
-        <div class='yui3-u-1-3'>
-            <label>State</label>
-            <select class='yui3-input-medium'>
-                <option>AL</option>
-                <option>CA</option>
-                <option>IL</option>
-                <option>MD</option>
-                <option>NY</option>
-            </select>
-        </div>
-    </div>
-    <label class="yui3-checkbox">
-      <input type="checkbox"> I've read the terms and conditions
-    </label>
-    <button type="submit" class='yui3-button'>Submit</button>
-  </fieldset>
-</form>
-```
-
-
-<h2>Inline Form</h2>
-
-An inline form can be created by adding the `yui3-form-inline` class to a `<form>` element. This results in form controls becoming inline-blocks and allows for a smaller compact form.
-
-<form class="yui3-form-inline">
-    <legend>A compact inline form</legend>
-  <input type="text" class="yui3-input-small" placeholder="Email">
-  <input type="password" class="yui3-input-small" placeholder="Password">
-  <label class="yui3-checkbox">
-    <input type="checkbox"> Remember me
-  </label>
-  <button type="submit" class="yui3-button">Sign in</button>
-</form>
-
-<h3>The HTML</h3>
-
-```
-<form class="yui3-form-inline">
-    <legend>A compact inline form</legend>
-  <input type="text" class="yui3-input-small" placeholder="Email">
-  <input type="password" class="yui3-input-small" placeholder="Password">
-  <label class="yui3-checkbox">
-    <input type="checkbox"> Remember me
-  </label>
-  <button type="submit" class="yui3-button">Sign in</button>
-</form>
-```
-
-<h2>Horizontal Form</h2>
-
-A common design pattern for forms is to right-align labels, and left align form controls. This can be done by adding the `yui3-form-horizontal` class to a `<form>` element, and wrapping the label and the associated control in a `yui3-control-group` class. 
-
-Elements wrapped in a `yui3-controls` class get aligned along to the input elements. This is useful for checkboxes and buttons. 
-
-<form class="yui3-form-horizontal">
-  <fieldset>
-    <div class="yui3-control-group">
-        <label>Username</label>
-        <input type="text" placeholder="Username">
-    </div>
-
-    <div class="yui3-control-group">
-        <label>Password</label>
-        <input type="password" placeholder="Password">
-    </div>
-
-    <div class="yui3-control-group">
-        <label>Email Address</label>
-        <input type="text" placeholder="Email Address">
-    </div>
-
-    <div class="yui3-control-group">
-        <label>Supercalifragilistic Label</label>
-        <input type="text" placeholder="Enter something here...">
-    </div>
-
-    <div class="yui3-controls">
-        <label class="yui3-checkbox">
-            <input type="checkbox"> Check me out
-        </label>
-        <button type="submit" class="yui3-button">Submit</button>
-    </div>
-  </fieldset>
-</form>
-
-
-<h3>The HTML</h3>
-
-```
-<form class="yui3-form-horizontal">
-  <fieldset>
-    <div class="yui3-control-group">
-        <label>Username</label>
-        <input type="text" placeholder="Username">
-    </div>
-
-    <div class="yui3-control-group">
-        <label>Password</label>
-        <input type="password" placeholder="Password">
-    </div>
-
-    <div class="yui3-control-group">
-        <label>Email Address</label>
-        <input type="text" placeholder="Email Address">
-    </div>
-
-    <div class="yui3-control-group">
-        <label>Supercalifragilistic Label</label>
-        <input type="text" placeholder="Enter something here...">
-    </div>
-
-    <div class="yui3-controls">
-        <label class="yui3-checkbox">
-            <input type="checkbox"> Check me out
-        </label>
-        <button type="submit" class="yui3-button">Submit</button>
-    </div>
-  </fieldset>
-</form>
-```
-
-<h2>Grouped Inputs</h2>
-
-Grouped forms are great for grouping a number of related input elements. They work best with text elements. Simply add a `yui3-group` class name to a `<fieldset>` to get this effect. The first and last controls get rounded corners, and all spacing between the controls are removed.
-
-
-<form>
-    <fieldset class='yui3-group'>
-        <input type="text" class='yui3-input-large' placeholder='Username'>
-        <input type="password" class='yui3-input-large' placeholder='Password'>
-        <input type="text" class='yui3-input-large' placeholder='Email'>
-    </fieldset>
-    <fieldset class='yui3-group'>
-        <input type="text" class='yui3-input-large' placeholder='Another Group'>
-        <input type="text" class='yui3-input-large' placeholder='More Stuff'>
-    </fieldset>
-    <button type="submit" class="yui3-button yui3-input-large">Sign in</button>
-</form>
-
-<h3>The HTML</h3>
-```
-<form>
-    <fieldset class='yui3-group'>
-        <input type="text" class='yui3-input-large' placeholder='Username'>
-        <input type="password" class='yui3-input-large' placeholder='Password'>
-        <input type="text" class='yui3-input-large' placeholder='Email'>
-    </fieldset>
-    <fieldset class='yui3-group'>
-        <input type="text" class='yui3-input-large' placeholder='Another Group'>
-        <input type="text" class='yui3-input-large' placeholder='More Stuff'>
-    </fieldset>
-    <button type="submit" class="yui3-button yui3-input-large">Sign in</button>
-</form>
-```
-
-<h2>Input Sizing</h2>
-
-You can size input elements by adding various class names to them. 
-
-<table>
-	<thead>
-		<tr>
-			<th>Class name</th>
-			<th>Width</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>`yui3-input-mini`</td>
-			<td>60px</td>
-		</tr>
-		<tr>
-			<td>`yui3-input-small`</td>
-			<td>90px</td>
-		</tr>
-		<tr>
-			<td>`yui3-input-medium`</td>
-			<td>150px</td>
-		</tr>
-		<tr>
-			<td>`yui3-input-large`</td>
-			<td>210px</td>
-		</tr>
-		<tr>
-			<td>`yui3-input-xlarge`</td>
-			<td>270px</td>
-		</tr>
-		<tr>
-			<td>`yui3-input-xxlarge`</td>
-			<td>530px</td>
-		</tr>
-	</tbody>
-</table>
-
-<form>
-	<input class="yui3-input-mini" type="text" placeholder=".yui3-input-mini">
-	<input class="yui3-input-small" type="text" placeholder=".yui3-input-small">
-	<input class="yui3-input-medium" type="text" placeholder=".yui3-input-medium">
-	<input class="yui3-input-large" type="text" placeholder=".yui3-input-large">
-	<input class="yui3-input-xlarge" type="text" placeholder=".yui3-input-xlarge">
-	<input class="yui3-input-xxlarge" type="text" placeholder=".yui3-input-xxlarge">
-</form>
-
-<h3>The HTML</h3>
-```
-<input class="yui3-input-mini" type="text">
-<input class="yui3-input-small" type="text">
-<input class="yui3-input-medium" type="text">
-<input class="yui3-input-large" type="text">
-<input class="yui3-input-xlarge" type="text">
-<input class="yui3-input-xxlarge" type="text">
-```
-
-<h2>Invalid Inputs</h2>
-
-Add the HTML5 <a href="http://www.w3.org/html/wg/drafts/html/master/forms.html#the-required-attribute">`required`</a> attribute to add styling to input elements that require information.
-
-<form>
-<input class="yui3-input-medium" type="email" placeholder="Requires an email" required>
-</form>
-
-<h3>The HTML</h3>
-```
-<input class="yui3-input-medium" type="email" placeholder="Requires an email" required>
-```
-
-<h2>Disabled Inputs</h2>
-
-Add the `disabled` attribute to elements to style them as disabled controls.
-
-<form>
-<input class="yui3-input-xlarge" id="disabledInput" type="text" placeholder="Disabled input here..." disabled>
-</form>
-
-<h3>The HTML</h3>
-```
-<input class="yui3-input-xlarge" id="disabledInput" type="text" placeholder="Disabled input here..." disabled>
-```
-
-<h2>Rounded Form</h2>
-
-Create rounded input elements by adding a `yui3-input-rounded` class to them. Great for search forms!
-
-<form>
-  <input type="text" class="yui3-input-medium yui3-input-rounded">
-  <button type="submit" class='yui3-button'>Search</button>
-</form>
-
-<h3>The HTML</h3>
-```
-<input type="text" class="yui3-input-medium yui3-input-rounded">
-```
-
-<h2>Other Common Elements</h2>
-
-<h3>Selects</h3>
-<select class='yui3-input-medium'>
-    <option>Brazil</option>
-    <option>Canada</option>
-    <option>United States</option>
-    <option>United Kingdom</option>
-    <option>Venezuela</option>
-</select>
- 
-<select multiple="multiple" class="yui3-input-large">
-    <option>Brazil</option>
-    <option>Canada</option>
-    <option>United States</option>
-    <option>United Kingdom</option>
-    <option>Venezuela</option>
-</select>
-
-<h3>Checkboxes and Radios</h3>
-<label class="yui3-checkbox">
-  <input type="checkbox" value="">
-  Here's option one. 
-</label>
- 
-<label class="yui3-radio">
-  <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-  Here's a radio button. You can choose this one..
-</label>
-<label class="yui3-radio">
-  <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-  ..Or this one! 
-</label>
-
-<h2>Known Issues</h2>
-
-<h3>As of Dec.31, 2012</h3>
-<ul>
-	<li>Vertical alignment of inline elements may be off by 1px in IE6 and IE7.</li>
-</ul>
-
