--- a/css/forms.css
+++ b/css/forms.css
@@ -1,12 +1,15 @@
 input,
 select {
-  padding: 6px 9px;
+  padding: 9px 9px;
   border: 1px solid #bbb;
   box-sizing: border-box;
   display: inline-block;
   margin-bottom: 5px;
   border-radius: 4px;
   box-shadow: inset 0 1px 3px #ddd;
+  -webkit-transition: all 150ms ease-out;
+  -webkit-font-smoothing: antialiased;
+  font-size:90%;
 }
 input:focus,
 select:focus {
@@ -14,8 +17,9 @@ select:focus {
   outline: thin dotted \9;
   /* IE6-9 */
 
-  border-color: #8FD6F2;
+  border-color: #129FEA;
   box-shadow: 0 0 5px #11AFED;
+
 }
 .yui3-checkbox,
 .yui3-radio {
@@ -55,6 +59,8 @@ label {
   padding: 4px 0;
   margin-bottom: 2.5px;
   vertical-align: middle;
+  color: #999;
+  font-size:90%;
 }
 fieldset {
   padding: 0;
