fix responsive styles

--- a/css/forms-responsive.css
+++ b/css/forms-responsive.css
@@ -1,15 +1,15 @@
-@media (max-width:480px) {
+@media only screen and (max-width : 480px) {
 	button[type='submit'] {
 		margin: 10px 0 0;
 	}
 
-	.yui3-horizontal-form .yui3-control-group label {
+	.yui3-form-horizontal .yui3-control-group label {
 		display: block;
 		text-align: left;
 		float: none;
 	}
 
-	.yui3-horizontal-form .yui3-controls {
+	.yui3-form-horizontal .yui3-controls {
 		margin:20px 0 0;
 	}
 }
