--- a/css/forms.css
+++ b/css/forms.css
@@ -102,7 +102,7 @@ legend {
   text-align: right;
   float: left;
   width: 160px;
-  margin-right: 10px;
+  margin: 8px 10px 0 0;
 }
 .yui3-form-horizontal .yui3-controls {
   margin: 20px 0 0 170px;
