--- a/css/forms.css
+++ b/css/forms.css
@@ -193,8 +193,8 @@ button[type='submit'] {
 /* The addons on prepended and appended inputs */
 
 .yui3-input-prepend .yui3-addon, .yui3-input-append .yui3-addon {
-  padding: 0.48em 0.8em;
-  font-size: 0.7em;
+  padding: 0.45em 0.8em 0.4em;
+  font-size: 0.8em;
   text-align: center;
   border:1px solid #eee;
   background: #eee;
