--- a/css/forms.css
+++ b/css/forms.css
@@ -1,8 +1,7 @@
-input,
-select {
+.yui3-form input,
+.yui3-form select {
   padding: 0.5em 0.6em;
   display: inline-block;
-  margin: 0;
   border: 1px solid #ccc;
   font-size: 0.8em;
   box-shadow: inset 0 1px 3px #ddd;
@@ -18,115 +17,107 @@ select {
   -webkit-font-smoothing: antialiased;
 }
 
-input:focus,
-select:focus {
+.yui3-form input:focus,
+.yui3-form select:focus {
   outline: 0;
   outline: thin dotted \9; /* IE6-9 */
   border-color: #129FEA;
 }
-.yui3-checkbox,
-.yui3-radio {
+.yui3-form .yui3-checkbox,
+.yui3-form .yui3-radio {
   margin: 0.5em 0;
+  display: block;
 }
-input[disabled],
-select[disabled],
-textarea[disabled],
-input[readonly],
-select[readonly],
-textarea[readonly] {
+.yui3-form input[disabled],
+.yui3-form select[disabled],
+.yui3-form textarea[disabled],
+.yui3-form input[readonly],
+.yui3-form select[readonly],
+.yui3-form textarea[readonly] {
   cursor: not-allowed;
   background-color: #eaeded;
   color: #cad2d3;
   border-color: transparent;
 }
-input:focus:invalid,
-textarea:focus:invalid,
-select:focus:invalid {
+.yui3-form input:focus:invalid,
+.yui3-form textarea:focus:invalid,
+.yui3-form select:focus:invalid {
   color: #b94a48;
   border: 1px solid #ee5f5b;
 }
-input:focus:invalid:focus,
-textarea:focus:invalid:focus,
-select:focus:invalid:focus {
+.yui3-form input:focus:invalid:focus,
+.yui3-form textarea:focus:invalid:focus,
+.yui3-form select:focus:invalid:focus {
   border-color: #e9322d;
 }
-select {
+.yui3-form select {
   width: 220px;
   border: 1px solid #ccc;
   background-color: white;
 }
-select[multiple] {
+.yui3-form select[multiple] {
   height: auto;
 }
-label {
-  display: block;
-  margin: 0.5em 0 0.3em;
-  vertical-align: middle;
+.yui3-form label {
+  margin: 0.5em 0 0.2em;
   color: #999;
   font-size:90%;
 }
-fieldset {
-  padding: 0;
+.yui3-form fieldset {
   margin: 0;
+  padding: 0.35em 0 0.75em;
   border: 0;
 }
-legend {
+.yui3-form legend {
   display: block;
   width: 100%;
   padding: 0.3em 0;
-  margin-bottom: 0.7em;
+  margin-bottom: 0.3em;
   font-size: 125%;
-  line-height: 1.6em;
   color: #333;
   border-bottom: 1px solid #e5e5e5;
 }
 
-.yui3-form-inline input,
-.yui3-form-horizontal input,
-.yui3-form-inline textarea,
-.yui3-form-horizontal textarea,
-.yui3-form-inline select,
-.yui3-form-horizontal select,
-.yui3-form-inline .yui3-help-inline,
-.yui3-form-inline label,
-.yui3-form-horizontal .yui3-help-inline,
-.yui3-input-prepend .yui3-addon,
-.yui3-input-append .yui3-addon {
+.yui3-form-stacked label {
+  display: block;
+}
+
+.yui3-form-aligned input,
+.yui3-form-aligned textarea,
+.yui3-form-aligned select,
+.yui3-form-aligned .yui3-help-inline {
   display: inline-block;
   *display: inline; /* IE7 inline-block hack */
   *zoom: 1;
   vertical-align: middle;
 }
 
-.yui3-form-inline .yui3-button {
-  margin-top: -0.2em`;
+/* aligned Forms */
+.yui3-form-aligned .yui3-control-group {
+  margin-bottom: 0.5em;
 }
-
-/* Horizontal Forms */
-.yui3-form-horizontal .yui3-control-group {
-  margin-bottom: 1em;
-}
-.yui3-form-horizontal .yui3-control-group label {
+.yui3-form-aligned .yui3-control-group label {
   text-align: right;
-  float: left;
+  display: inline-block;
+  vertical-align: middle;
   width: 10em;
-  margin: 0.4em 1em 0 0;
+  margin: 0 1em 0 0;
 }
-.yui3-form-horizontal .yui3-controls {
+.yui3-form-aligned .yui3-controls {
   margin: 1.5em 0 0 10em;
 }
 
 /* Rounded Inputs */
-.yui3-input-rounded {
+.yui3-form .yui3-input-rounded {
   border-radius: 20px;
-  padding-left: 10px;
+  padding-left:1em;
 }
 
 /* Grouped Inputs */
-.yui3-group {
+.yui3-form .yui3-group fieldset {
   margin-bottom: 10px;
 }
-.yui3-group input {
+.yui3-form .yui3-group input {
   display: block;
   padding: 10px;
   margin: 0;
@@ -134,131 +125,41 @@ legend {
   position: relative;
   top: -1px;
 }
-.yui3-group :focus {
+.yui3-form .yui3-group input:focus {
   z-index: 2;
 }
-.yui3-group :first-child {
+.yui3-form .yui3-group input:first-child {
   top: 1px;
   border-radius: 4px 4px 0 0;
 }
-.yui3-group :last-child {
+.yui3-form .yui3-group input:last-child {
   top: -2px;
   border-radius: 0 0 4px 4px;
 }
+.yui3-form .yui3-group button {
+  margin: 0.35em 0;
+}
 
-/* Input Sizes */
-.yui3-input-mini {
-  width: 60px;
+.yui3-form .yui3-input-1 {
+  width: 100%;
 }
-.yui3-input-small {
-  width: 90px;
+.yui3-form .yui3-input-2-3 {
+  width: 66%;
 }
-.yui3-input-medium {
-  width: 150px;
+.yui3-form .yui3-input-1-2 {
+  width: 50%;
 }
-.yui3-input-large {
-  width: 210px;
+.yui3-form .yui3-input-1-3 {
+  width: 33%;
 }
-.yui3-input-xlarge {
-  width: 270px;
-}
-.yui3-input-xxlarge {
-  width: 530px;
-}
-button[type='submit'] {
-  font-size: 90%;
+.yui3-form .yui3-input-1-4 {
+  width: 25%;
 }
 
 /* Inline help for forms */
-.yui3-help-inline {
+.yui3-form .yui3-help-inline {
   display: inline-block;
-  padding-left: 5px;
+  padding-left: 0.3em;
+  color: #666;
   vertical-align: middle;
 }
-
-
-/* Prepended and Appended Inputs */
-.yui3-input-prepend, .yui3-input-append {
-  margin-bottom: 0.5em;
-
-  /* Remove all whitespace between inline-block elements */
-  white-space: nowrap;
-  letter-spacing: -0.31em; /* webkit: collapse white-space between units */
-  *letter-spacing: normal; /* reset IE < 8 */
-  word-spacing: -0.43em; /* IE < 8 && gecko: collapse white-space between units */
-}
-
-/* The addons on prepended and appended inputs */
-
-.yui3-input-prepend .yui3-addon, .yui3-input-append .yui3-addon {
-  padding: 0.3em 0.8em;
-  font-size: 0.8em;
-  text-align: center;
-  border:1px solid #eee;
-  background: #eee;
-
-  /* line-height and height equal the same value to get consistent height in FF/Chrome */
-  height:19px; 
-  line-height:19px;
-
-  /* Reset letter and word spacing to normal so wrapper white-space collapse don't affect this element */
-  letter-spacing: normal;
-  word-spacing: normal;
-  color: #999;
-}
-
-/* For prepended add ons, we only want border radius on the top and bottom left */
-.yui3-input-prepend .yui3-addon {
-  border-radius: 4px 0 0 4px;
-}
-
-/* For inputs that come after a prepended addon, we only want border radius on the top and bottom right. The vertical align:top is for the display:inline-block; on FF. */
-.yui3-input-prepend input {
-  vertical-align: top;
-  border-radius: 0 4px 4px 0;
-}
-
-/* For appended add ons, we only want border radius on the top and bottom right */
-.yui3-input-append .yui3-addon {
-  border-radius: 0 4px 4px 0;
-}
-
-/* For inputs that come before an appended addon, we only want border radius on the top and bottom left. The vertical align:top is for the display:inline-block; on FF. */
-.yui3-input-append input {
-  vertical-align: top;
-  border-radius: 4px 0 0 4px;
-}
-
-/* For addons that are part of a prepended and appended div, we want the first one to have top and bottom left rounded-corners. */
-.yui3-input-prepend.yui3-input-append .yui3-addon:first-child {
-  border-radius: 4px 0 0 4px;
-}
-
-/* For inputs that are part of a prepended and appended div, we dont want any rounded corners since they are surrounded by addons */
-.yui3-input-prepend.yui3-input-append input {
-  border-radius: 0;
-}
-
-/* Prepended and appended buttons should reset their border-radius to 0. Word and letter spacing return to normal because they were collapsed for parent (see above) */
-.yui3-input-prepend .yui3-button, .yui3-input-append .yui3-button {
-  border-radius: 0;
-  word-spacing: normal;
-  letter-spacing: normal;
-}
-
-/* For prepended buttons, we only want border radius on the top and bottom left. The negative margin stops the double-border and box-shadow from leaking */
-.yui3-input-prepend .yui3-button {
-  border-radius: 4px 0 0 4px;
-  margin: 0 -1px 0 0;
-}
-
-/* For appended buttons, we only want border radius on the top and bottom right. The negative margin stops the double-border and box-shadow from leaking */
-.yui3-input-append .yui3-button {
-  margin: 0 0 0 -1px;
-}
-
-/* If we have multiple appended buttons, we only want the rounded border to affect the last one. */
-.yui3-input-append .yui3-button:last-child {
-  border-radius: 0 4px 4px 0;
-}
-
