--- a/css/forms-core.css
+++ b/css/forms-core.css
@@ -1,8 +1,14 @@
+/*! Copyright 2013 Yahoo! Inc. http://yuilibrary.com/license/ */
 /* This page lists core form styles adopted from Normalize.css. */
+/*! Copyright (c) Nicolas Gallagher and Jonathan Neal */ 
 
-/* ==========================================================================
-   Forms
-   ========================================================================== */
+/*! normalize.css v1.1.0 | MIT License | git.io/normalize */
+
+/* This page has Normalize.css form-specific style rules applied to a .yui3-form context */
+
+/* ==========
+   Forms Core
+   =========*/
 
 /*
  * Corrects margin displayed oddly in IE 6/7.
